# voiStarcraft-BroodWar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bot_bridge/: CommanderBridge.hpp
docs/: BACKEND_AUDIT_PURPLEWAVE.md  COMMANDABILITY_AUDIT.md  ISSUE_COMPLETION_MATRIX.md  RUNTIME.md
examples/: command_ko.txt
fixtures/: parser_corpus.json
integrations/purplewave/: CommanderIntent.scala  CommanderQueueConsumer.scala  CommanderTelemetry.scala  PurpleWavePatchNotes.md  README.md
schemas/: command.schema.json
scripts/: apply_purplewave_integration.py  verify_local.sh
src/voi_bw_commander/: __init__.py  adapters.py  arbiter.py  audit.py  backends.py  benchmark.py  cli.py  eval.py  input_surfaces.py  llm.py  models.py  parser.py  queue.py  race_profiles.py  readiness.py  replay_ingest.py  replay_report.py  runner.py  safety.py  schema.py  source_hooks.py  stardata.py  store.py  telemetry.py  verifier.py
tests/: test_arbiter_safety_verifier.py  test_backend_baseline.py  test_gap_closeout_surfaces.py  test_intent_state.py  test_parser.py  test_parser_eval.py  test_queue_readiness_scripts.py  test_race_profiles.py  test_schema_store_llm.py  test_telemetry_report_audit.py
ui/: commander.html
